Adicinada novas rotas e métodos de autenticação à documentação do swagger
