# swagger/paths/pedidos/put.yaml
@@ -1,8 +1,10 @@
 summary: 'Atualização de um pedido: mais uma etapa na distribuição'
 description: 'Atualização de um pedido: mais uma etapa na distribuição'
+security:
+  - userQuery: []
+  - userAuth: []
 tags:
   - pedidos
-parameters:
 requestBody:
   description: 'Dados'
   required: true
